# monorepo_tests

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
docker/: select_pkgs.sh
docker/pkg_v1.0.0/: Dockerfile
docker/project_shadow/: docker-compose.yml
docker/project_shadow/node1_pkg/: Dockerfile  entrypoint.sh
docker/project_shadow/node2_pkg/: Dockerfile
libs/archived/: README.md
libs/modules/.github/: CODEOWNERS
libs/modules/.github/workflows/: ci.yml
libs/modules/robot_control/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
libs/modules/robot_control/.devcontainer/: Dockerfile  devcontainer.json
libs/modules/robot_control/include/: EthercatMaster.h
libs/modules/robot_control/src/: EthercatMaster.cpp  main.cpp
libs/modules/robot_control/test/: CMakeLists.txt  example_test.cpp
libs/modules/simulation/: README.md
libs/modules/simulation/.devcontainer/: devcontainer.json
libs/modules/simulation/common/communication_managers/: communication_manager.py  ros2_manager.py
libs/modules/simulation/docker/: Dockerfile  Dockerfile.ci
libs/modules/simulation/docker/bug_fix/: robot_assembler.py
libs/modules/simulation/simulation/actions/: action.py  periodic_action.py
libs/modules/simulation/simulation/objects/: sim_camera.py  sim_object.py  sim_object_base.py  sim_robot.py  sim_static_object.py
libs/modules/simulation/simulation/states/: state.py
libs/modules/simulation/tests/common/: test_ros2_manager.py
libs/modules/simulation/tests/simulation/: test_objects.py
libs/ros2/node2_pkg/v1.0.0/node2_pkg/: package.xml
projects/project_apollo/: libs_requirements.json  select_pkgs.sh
projects/project_apollo/libs/modules/: robot_control  simulation
projects/project_test/node1_pkg/: CMakeLists.txt
projects/project_test/node1_pkg/src/: node1.cpp
src/project_test/node1_pkg/: package.xml
src/shared_pkgs/node2_pkg/: CMakeLists.txt
src/shared_pkgs/node2_pkg/src/: node2.cpp
